[package]
name = "baka"
version = "0.1.0"
edition = "2018"
authors = ["Catry <catry.me@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "basic multiple package manager"
edition = "2018"
homepage = "https://github.com/baka-org/baka"
license = "MIT"
repository = "https://github.com/baka-org/baka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
