[package]
name = "baka"
version = "0.1.0"
edition = "2018"
authors = ["Catry <catry.me@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "basic multiple package manager"
homepage = "https://github.com/baka-org/baka"
license = "MIT"
repository = "https://github.com/baka-org/baka"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
toml = "0.5.8"
serde_yaml = "0.8.17"